made some additions and subtractions front end

--- a/front-end/nives/cohorts.html
+++ b/front-end/nives/cohorts.html
@@ -61,11 +61,23 @@
         <p class="cohort-paragraph">Our cohorts consist of aspiring developers, IX designers, project managers and so much more. 
             Our previous cohorts have resulted in graduates going on to work internationally for Tata and locally at Trustful Trade, Kanzu Code and Laboremus. <br><br>
             We run a total of three cohorts per year. <br> <br>
-            <ul class="cohort-dates">
-                <li><i class="far fa-calendar-check"></i> March to May</li>
-                <li><i class="far fa-calendar-check"></i> June to August</li>
-                <li><i class="far fa-calendar-check"></i> September to November</li>
-            </ul>
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="cohort-dates">
+                        <li><i class="far fa-calendar-check"></i> March to May</li>
+                        <li><i class="far fa-calendar-check"></i> June to August</li>
+                        <li><i class="far fa-calendar-check"></i> September to November</li>
+                    </ul>
+                </div>
+                <div class=" col-md-6">
+                    <ul class="cohort-hours">
+                        <li><i class="fa fa-clock-o"></i> 70 Hours of online lessons</li>
+                        <li><i class="fa fa-clock-o"></i> 75 Hours of mentoring</li>
+                        <li><i class="fa fa-clock-o"></i> 205 Hours of self-study</li>
+                    </ul>
+                </div>
+            </div>
+            
         </p>
         
     </div>
@@ -73,7 +85,7 @@
 
 
     <!-- the impact section start -->
-    <div class="container impact-div">
+    <div class="container-fluid impact-div">
        <h2 class="section-title text-center">The Impact</h2>
        <div class="row">
            <div class="col-md-6 ">
@@ -86,8 +98,9 @@
                     graduates to opportunities that include internships, jobs and scholarships. And once lock down ends, we look forward to reserving those that are just not able to make it online.
                 </p> 
             </div>    
-            <div class="col-md-5 ">
-                <img class="thumb-img-2" src="./images/background.jpg">
+            <div class="col-md-5">
+                <iframe width="686" height="386" src="https://www.youtube.com/embed/nhcM14Rx3qs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             </div>
         </div>
     </div>
@@ -176,9 +189,9 @@
                     <h3 class="footer-title">Information</h3>
                     <ul class="footer-links">
                         <li><i class="fas fa-angle-right"></i> <a href="#">Testimonials</a></li>
-                        <li><i class="fas fa-angle-right"></i> <a href="#cohorts">Cohort Dates</a></li>
-                        <li><i class="fas fa-angle-right"></i> <a href="#">Facebook</a></li>
-                        <li><i class="fas fa-angle-right"></i> <a href="#">LinkedIn</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="https://twitter.com/etceducation" target="_blank">Twitter</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="https://www.facebook.com/etceducation/?ref=br_rs" target="_blank">Facebook</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="https://www.linkedin.com/groups/9012051/" target="_blank">LinkedIn</a></li>
                         <li><i class="fas fa-angle-right"></i> <a href="#">Donate</a></li>
                     </ul>
                 </div>
@@ -186,7 +199,7 @@
                 <div class="col-md-2">
                     <h3 class="footer-title">Pages</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-angle-right"></i> <a href="#" title="Home">Home</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="homepage.html" title="Home">Home</a></li>
                         <li><i class="fas fa-angle-right"></i> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejaBQzQZeQvww2zBFaNq-U5KjAFKLcHbA_MXwbtZmMmZ9r7w/viewform" target="_blank" title="Services">Application</a></li>
                         <li><i class="fas fa-angle-right"></i> <a href="https://www.etc.education/" title="Contact Us" target="_blank">Educating the children</a></li>
                     </ul>
