--- a/front-end/nives/homepage.html
+++ b/front-end/nives/homepage.html
@@ -62,7 +62,7 @@
         <div class="section-text">
             <h2 class="section-title text-center">About Code Queen</h2>
             <div class="row">
-                <div class="col-md-8 m-2 px-4">
+                <div class="col-md-8 px-4">
                     <p>We have partnered with The Innovation Village (a local start up hub) to bring a high quality course training young Ugandan women in coding, equipping them with the skills to find jobs in software development and STEM careers. <br> <br>
                         The course not only focuses on developing hard coding skills (in collaboration with local businesses), but also developing other attributes such as positive mind set and work readiness. It ends with a hackathon where students solve real 
                         time challenges for local businesses leading. Successful graduates are offered internships, scholarships and other linking opportunities through our ecosystem of partners. <br> <br>
@@ -99,21 +99,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 m-1 px-4 cohorts-section">
+                <div class="col-md-4 px-4 cohorts-section">
                     <h3>Cohorts</h3>
-                    <p>Code Queen is an 8 week coding bootcamp developed with industry; focused on delivering in-demand 21st century job skills. <br> <br>
+                    <p>Code Queen is a 10 week coding bootcamp developed with industry; focused on delivering in-demand 21st century job skills. <br> <br>
                     </p>
-                    <!-- <ul class="cohort-dates">
-                        <li><i class="far fa-calendar-check"></i> March to May</li>
-                        <li><i class="far fa-calendar-check"></i> June to August</li>
-                        <li><i class="far fa-calendar-check"></i> September to November</li>
-                    </ul> -->
-                    <h5>Hours breakdown</h5>
-                    <ul class="cohort-hours">
-                        <li><i class="fa fa-clock-o"></i> 70 Hours of online lessons</li>
-                        <li><i class="fa fa-clock-o"></i> 75 Hours of mentoring</li>
-                        <li><i class="fa fa-clock-o"></i> 205 Hours of self-study</li>
-                    </ul>
+                    <iframe width="686" height="386" src="https://www.youtube.com/embed/1NCt4Q3PWiM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    
                     <a href="cohorts.html">See what our cohorts are like</a>
                 </div>
             </div>
@@ -189,9 +180,9 @@
                     <h3 class="footer-title">Information</h3>
                     <ul class="footer-links">
                         <li><i class="fas fa-angle-right"></i> <a href="#">Testimonials</a></li>
-                        <li><i class="fas fa-angle-right"></i> <a href="#cohorts">Cohort Dates</a></li>
-                        <li><i class="fas fa-angle-right"></i> <a href="#">Facebook</a></li>
-                        <li><i class="fas fa-angle-right"></i> <a href="#">LinkedIn</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="https://twitter.com/etceducation" target="_blank">Twitter</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="https://www.facebook.com/etceducation/?ref=br_rs" target="_blank">Facebook</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="https://www.linkedin.com/groups/9012051/" target="_blank">LinkedIn</a></li>
                         <li><i class="fas fa-angle-right"></i> <a href="#">Donate</a></li>
                     </ul>
                 </div>
@@ -199,7 +190,7 @@
                 <div class="col-md-2">
                     <h3 class="footer-title">Pages</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-angle-right"></i> <a href="#" title="Home">Home</a></li>
+                        <li><i class="fas fa-angle-right"></i> <a href="homepage.html" title="Home">Home</a></li>
                         <li><i class="fas fa-angle-right"></i> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejaBQzQZeQvww2zBFaNq-U5KjAFKLcHbA_MXwbtZmMmZ9r7w/viewform" target="_blank" title="Services">Application</a></li>
                         <li><i class="fas fa-angle-right"></i> <a href="https://www.etc.education/" title="Contact Us" target="_blank">Educating the children</a></li>
                     </ul>
