--- a/front-end/nives/homepage.html
+++ b/front-end/nives/homepage.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="cohorts.html">COHORTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSejaBQzQZeQvww2zBFaNq-U5KjAFKLcHbA_MXwbtZmMmZ9r7w/viewform" target="_blank">APPLY NOW</a>
+                        <a class="nav-link" href="file:///C:/Users/enock/Desktop/Codequeen-project/front-end/Josephine/form.html" target="_blank">APPLY NOW</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">SIGN IN</a>
