--- a/front-end/Josephine/form.html
+++ b/front-end/Josephine/form.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   
-    <form name="form" method="POST" action="" class="input">  
+    <form name="form" method="POST" action="/person" class="input">  
       
         <div class="container"> 
           <div class="image">
