--- a/front-end/nives/homepage.html
+++ b/front-end/nives/homepage.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <!-- Brand -->
             <a class="navbar-brand" href="#">
-                <img src="images/side-logo.png" alt="code-queen logo" class="logo-header">
+                <img src="images/code queen.png" alt="code-queen logo" class="logo-header">
             </a>
             <!-- <a class="navbar-brand" href="#">Become the next code queen</a> -->
             <!-- Toggler/collapsibe Button -->
