--- a/front-end/nives/dashboard.html
+++ b/front-end/nives/dashboard.html
@@ -14,7 +14,7 @@
     <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
 
     <script src="./js/d3.min.js"></script>
-    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
     
     <link rel="stylesheet" href="./css/d3style.css">
@@ -26,7 +26,6 @@
                 <li> <a href="dashboard.html"> <i class="fas fa-home"></i> Dashboard</a> </li>
                 <li> <a href="#studentSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-user-friends"></i> Students</a>
                     <ul class="collapse list-unstyled" id="studentSubmenu">
-                        <!-- <li> <a href="register-student.html">Students</a> </li> -->
                         <li> <a href="all-students.html">All Students</a> </li>
                     </ul>
                 </li>
@@ -40,7 +39,7 @@
                 <li> <a href="#jobSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-book"></i> Job Board</a>
                     <ul class="collapse list-unstyled" id="jobSubmenu">
                         <li> <a href="post-job.html">Post a job</a> </li>
-                        <li> <a href="all-jobs.html">View all jobs</a> </li>
+                        
                     </ul>
                 </li>
                 <li> <a href="#mentorSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-user-friends"></i> Mentors</a>
