--- a/front-end/nives/edit-student.html
+++ b/front-end/nives/edit-student.html
@@ -14,7 +14,7 @@
     <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
 
     <script src="./js/d3.min.js"></script>
-    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
     
     <link rel="stylesheet" href="./css/d3style.css">
@@ -133,13 +133,9 @@
                                 <option value="Below Average">Below Average</option>
                             </select>
                         </div>
-                        <div class="form-group form-check">
-                          <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox"> Remember me
-                          </label>
-                        </div>
-                        <button type="submit" class="btn btn-dashboard btn-danger">Submit</button>
-                        <button type="submit" class="btn btn-dashboard btn-primary">Exit</button>
+                        
+                        <button type="submit" class="btn btn-orange">Submit</button>
+                        <button type="submit" class="btn btn-green">Exit</button>
                       </form> 
                     <div class="line"></div>
                 </div>
